--- a/MauiAdvices.Mobile/Resources/AppResources.xaml
+++ b/MauiAdvices.Mobile/Resources/AppResources.xaml
@@ -1,4 +1,18 @@
-<ResourceDictionary xmlns="http://schemas.microsoft.com/dotnet/2021/maui"
-                    xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml">
-    
+<ResourceDictionary xmlns="http://schemas.microsoft.com/dotnet/2021/maui" xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml">
+    <x:Double x:Key="Small1">4</x:Double>
+    <x:Double x:Key="Small2">8</x:Double>
+    <x:Double x:Key="Small3">12</x:Double>
+    <x:Double x:Key="Small4">16</x:Double>
+    <x:Double x:Key="Medium1">20</x:Double>
+    <x:Double x:Key="Medium2">24</x:Double>
+    <x:Double x:Key="Medium3">28</x:Double>
+    <x:Double x:Key="Medium4">32</x:Double>
+    <x:Double x:Key="Large1">36</x:Double>
+    <x:Double x:Key="Large2">40</x:Double>
+    <x:Double x:Key="Large3">44</x:Double>
+    <x:Double x:Key="Large4">48</x:Double>
+    <x:Double x:Key="Huge1">52</x:Double>
+    <x:Double x:Key="Huge2">56</x:Double>
+    <x:Double x:Key="Huge3">60</x:Double>
+    <x:Double x:Key="Huge4">64</x:Double>
 </ResourceDictionary>
